LuccaUI/Table [FIX] Fixed alignments issues (https://github.com/LuccaSA/lucca-ui/issues/7)

--- a/src/core/elements/_table.less
+++ b/src/core/elements/_table.less
@@ -49,19 +49,6 @@
 		background-color: @bg;
 	}
 
-	&.center-align {
-        text-align: center;
-	}
-	&.left-align {
-		text-align: left;
-	}
-	&.right-align {
-    	text-align: right;
-	}
-	&.justified-align {
-		text-align: justify;
-	}
-
     // Zebra table
     // ====
 	&.zebra {
